Fixes #137. Leave scrollbars to handsontable style.

--- a/static/css/panel.styl
+++ b/static/css/panel.styl
@@ -77,7 +77,7 @@ sideNavColor = #337ab7
   height 100%
   width 100%
   .editor
-    overflow: scroll
+    overflow: hidden
     height: 100%
     width 100%
 
